[metadata]
name = instagram_unfollow
version = 0.1.0
description = Software for Instagram used to spot accounts that are not following back.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    iu = instagram_unfollow:main
    instagram-unfollow = instagram_unfollow:main
